// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePointCloudData Should create the expected plotly point cloud data format when given defaults. 1`] = `
Object {
  "marker": Object {
    "sizemax": 10,
    "sizemin": 5,
  },
  "mode": "markers",
  "type": "pointcloud",
  "xy": Float32Array [
    1,
    2,
    3,
    4,
  ],
}
`;

exports[`generateScatterGLData Should create the expected plotly scatter data format when given defaults. 1`] = `
Object {
  "hoverinfo": "x+y+z",
  "marker": Object {
    "color": Array [
      6,
      2,
    ],
    "size": 4,
  },
  "mode": "markers",
  "name": "da-bo-dee undefined",
  "type": "scattergl",
  "x": Array [
    9,
    7,
  ],
  "y": Array [
    8,
    6,
  ],
  "z": Array [
    6,
    2,
  ],
}
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing a chain of residues with the same structure. 1`] = `
Array [
  Object {
    "boxpoints": false,
    "hoverinfo": "name",
    "marker": Object {
      "color": undefined,
    },
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "box",
    "x": Array [
      0,
      1,
      1,
      2,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
]
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing a single residue. 1`] = `
Array [
  Object {
    "boxpoints": false,
    "hoverinfo": "name",
    "marker": Object {
      "color": undefined,
    },
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "box",
    "x": Array [
      0,
      1,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
    ],
    "yaxis": "y2",
  },
]
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing alternating chains of residues with different structures. 1`] = `
Array [
  Object {
    "boxpoints": false,
    "hoverinfo": "name",
    "marker": Object {
      "color": undefined,
    },
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "box",
    "x": Array [
      0,
      1,
      1,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "boxpoints": false,
    "hoverinfo": "name",
    "marker": Object {
      "color": undefined,
    },
    "name": "BETA_BRIDGE",
    "orientation": "h",
    "showlegend": false,
    "type": "box",
    "x": Array [
      2,
      3,
      3,
      4,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "boxpoints": false,
    "hoverinfo": "name",
    "marker": Object {
      "color": "green",
    },
    "name": "BETA_SHEET",
    "orientation": "h",
    "showlegend": false,
    "type": "box",
    "x": Array [
      5,
      6,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
    ],
    "yaxis": "y2",
  },
]
`;
